--- a/ReimbursementApp/src/main/webapp/html/index.html
+++ b/ReimbursementApp/src/main/webapp/html/index.html
@@ -1,22 +1,17 @@
-<!DOCTYPE HTML>
-	<html>
-	<head>
-		<title>my app</title>
-	
-	
-	
-	
-	</head>
-	
-		<body>
-		<form method="post" action="idnum">
-		<input type="text" name="idnum" >
-		
-		<input type = "submit" value="search" >
-		
-		</form>
-		
-		
-		</body>
-	
-	</html>
+<!DOCTYPE html>
+<html>
+
+<head>
+<title>index html</title>
+</head>
+<body>
+	this is first
+
+	<form method="post" action="login.go">
+		<input type="text" name="username" placeholder="username"> 
+		<input type="password" name="password" placeholder="password"> 
+		<input type="submit" value="login">
+	</form>
+
+</body>
+</html>
