--- a/ReimbursementApp/src/main/webapp/html/second.html
+++ b/ReimbursementApp/src/main/webapp/html/second.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>second</title>
+<title>2_Login Page</title>
 </head>
 <body>
-	this is second
+	Please Login to continue!
 
 
 
-	<form method="post" action="set.session">
-		<input type="text" name="username" placeholder="username"> <input
-			type="password" name="password" placeholder="password"> <input
-			type="submit" value="login">
+	<form method="post" action="login.go">
+		<input type="text" required="" name="username" placeholder="username"> <input
+			type="password" name="password" required="required field" placeholder="password"> <input
+			type="submit" value="log in">
 	</form>
 
-	<form action="print.session" method="post">
+	<!--form action="print.session" method="post">
 		<input type="submit" value="print">
-	</form>
-
-	<form action="invalidate.session" method="post">
-		<input type="submit" value="invalidate">
-	</form>
+	</form-->
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<!--form action="invalidate.session" method="post">
+		<span>
+		<input type="submit" value="log out">
+		</span>
+		
+	</form-->
 </body>
 </html>
