--- a/ReimbursementApp/src/main/webapp/html/third.html
+++ b/ReimbursementApp/src/main/webapp/html/third.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Third</title>
+<title>3_Employee</title>
 </head>
 <body>
-this is third
+<h3>WELCOME MANAGER</h3>
+		<p>reimbursements</p>
+	<input type="submit" value="Create">
+	<input type="submit" value="View">
+
 </body>
 </html>
