--- a/ReimbursementApp/src/main/webapp/html/index.html
+++ b/ReimbursementApp/src/main/webapp/html/index.html
@@ -5,7 +5,7 @@
 <title>Home Page</title>
 </head>
 <body>
-	Go to Login
+	Welcome!
 
 	<form method="post" action="login.go">
 		<!--input type="text" name="username" placeholder="username"> 
