--- a/ReimbursementApp/src/main/webapp/html/second.html
+++ b/ReimbursementApp/src/main/webapp/html/second.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	Please Login to continue!
-
+	Or taste my blade!
 
 
 	<form method="post" action="login.go">
@@ -13,16 +13,19 @@
 			type="password" name="password" required="required field" placeholder="password"> <input
 			type="submit" value="log in">
 	</form>
+	<div>
+	<img src ="photos/ninja.jpg" height="500px" width="700px"></div>
 
 	<!--form action="print.session" method="post">
 		<input type="submit" value="print">
 	</form-->
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<!--form action="invalidate.session" method="post">
+	<form action="invalidate.session" method="post">
 		<span>
 		<input type="submit" value="log out">
 		</span>
 		
-	</form-->
+	</form>
+	
 </body>
 </html>
