--- a/ReimbursementApp/src/main/webapp/html/index.html
+++ b/ReimbursementApp/src/main/webapp/html/index.html
@@ -7,11 +7,19 @@
 <body>
 	Welcome!
 
-	<form method="post" action="login.go">
+	<form method="post" action="log.go">
 		<!--input type="text" name="username" placeholder="username"> 
 		<input type="password" name="password" placeholder="password"--> 
-		<input type="submit" value="login">
+		<input  type="submit" href="html/second.html" value="login">
+		<a  type="submit" href="html/register.html">xx</a>
 	</form>
 
+
+	<form method="post" action="register.go">
+		<!--input type="text" name="username" placeholder="username"> 
+		<input type="password" name="password" placeholder="password"--> 
+		<input type="submit" value="Register">
+	</form>
+	
 </body>
 </html>
