--- a/ReimbursementApp/src/main/webapp/html/second.html
+++ b/ReimbursementApp/src/main/webapp/html/second.html
@@ -20,9 +20,9 @@
 		<input type="submit" value="print">
 	</form-->
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<form action="invalidate.session" method="post">
+	<form action="home.go" method="post">   <!-- "invalidate.session" -->
 		<span>
-		<input type="submit" value="log out">
+		<input type="submit" value="Go Home">
 		</span>
 		
 	</form>
