--- a/ReimbursementApp/src/main/webapp/html/third.html
+++ b/ReimbursementApp/src/main/webapp/html/third.html
@@ -7,7 +7,7 @@
 <h3>WELCOME MANAGER</h3>
 		<p>reimbursements</p>
 		
-	<form method="get" action="getall">
+	<form method="get" action="getall.go">
 	<input type="checkbox" name="view all" value="View All">
 	<input type="submit" value="View All">
 	
