--- a/ReimbursementApp/src/main/webapp/html/register.html
+++ b/ReimbursementApp/src/main/webapp/html/register.html
@@ -11,12 +11,12 @@
 <h3>REGISTER Employee Account</h3>
 
 <form action="submit.go" method="post">
-			<label>Username</label> <input type="text" name="username" id="username"><br/>
-			<label>Password</label> <input type="text" name="user_password" id="password"><br/>
-			<label>LastName</label> <input type="text" name="last_name" id="lastname"><br/>
-			<label>FirstName</label> <input type="text" name="first_name" id="firstname"><br/>
-			<label>Email</label> <input type="text" name="user_email" id="email address"><br/>
-			<label>Role</label> <input type="number" name="role_id" id="role"><br/>
+			<label>Username</label> <input type="text" required="" name="username" id="username"><br/>
+			<label>Password</label> <input type="text" required="" name="user_password" id="password"><br/>
+			<label>LastName</label> <input type="text"  required="" name="last_name" id="lastname"><br/>
+			<label>FirstName</label> <input type="text"  required="" name="first_name" id="firstname"><br/>
+			<label>Email</label> <input type="text"  required="" name="user_email" id="email address"><br/>
+			<label>Role</label> <input type="number"  name="role_id" id="role"><br/>
 			<!--label>Status</label> <input type="number" name="status" id="status_id"><br/>
 			<label>Type</label> <input type="text" name="type_id" id="status_type"--><br/>
 			<input type="submit" value="Submit" id="submit">
